// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be disabled 1`] = `
<div
  className="typeahead-component"
>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={true}
        type="text"
        value=""
        valueType="string"
      />
    </div>
    <Spinner
      className="typeahead-spinner"
      size="16"
      type="spinner-circular"
    />
  </.sc-bwzfXH>
</div>
`;

exports[`should display a list when the user types a letter 1`] = `
<div
  className="typeahead-component"
>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={false}
        type="text"
        value="a"
        valueType="string"
      />
      <Icon
        className="reset-button"
        fill="#9198a0"
        height="18"
        name="md-close"
        onClick={[Function]}
        width="18"
      >
        Reset
      </Icon>
    </div>
    <Spinner
      className="typeahead-spinner"
      size="16"
      type="spinner-circular"
    />
    <ul
      className="typeahead-list"
      style={null}
    >
      <li
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>A</b>ustria",
          }
        }
        key="0"
        onClick={[Function]}
      />
      <li
        dangerouslySetInnerHTML={
          Object {
            "__html": "Bermud<b>a</b>",
          }
        }
        key="1"
        onClick={[Function]}
      />
    </ul>
  </.sc-bwzfXH>
</div>
`;

exports[`should display a loader 1`] = `
<div
  className="typeahead-component loading"
>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={false}
        type="text"
        value=""
        valueType="string"
      />
    </div>
    <Spinner
      className="typeahead-spinner"
      loading={true}
      size="16"
      type="spinner-circular"
    />
  </.sc-bwzfXH>
</div>
`;

exports[`should have a label 1`] = `
<div
  className="typeahead-component"
>
  <label>
    Typeahead Label
  </label>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={false}
        type="text"
        value=""
        valueType="string"
      />
    </div>
    <Spinner
      className="typeahead-spinner"
      size="16"
      type="spinner-circular"
    />
  </.sc-bwzfXH>
</div>
`;

exports[`should have an extra class 1`] = `
<div
  className="typeahead-component test-class"
>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={false}
        type="text"
        value=""
        valueType="string"
      />
    </div>
    <Spinner
      className="typeahead-spinner"
      size="16"
      type="spinner-circular"
    />
  </.sc-bwzfXH>
</div>
`;

exports[`should have placeholder text 1`] = `
<div
  className="typeahead-component"
>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={false}
        placeholder="test"
        type="text"
        value=""
        valueType="string"
      />
    </div>
    <Spinner
      className="typeahead-spinner"
      size="16"
      type="spinner-circular"
    />
  </.sc-bwzfXH>
</div>
`;

exports[`should shallow render itself 1`] = `
<div
  className="typeahead-component"
>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={false}
        type="text"
        value=""
        valueType="string"
      />
    </div>
    <Spinner
      className="typeahead-spinner"
      size="16"
      type="spinner-circular"
    />
  </.sc-bwzfXH>
</div>
`;

exports[`should update when props are set 1`] = `
<div
  className="typeahead-component test-class"
>
  <.sc-bwzfXH
    className="typeahead-component-styled"
    css={
      Object {
        "position": "relative",
        "width": undefined,
      }
    }
  >
    <div
      className="input-wrapper"
    >
      <Input
        changeCallback={[Function]}
        disabled={false}
        type="text"
        value="Number"
        valueType="string"
      />
      <Icon
        className="reset-button"
        fill="#9198a0"
        height="18"
        name="md-close"
        onClick={[Function]}
        width="18"
      >
        Reset
      </Icon>
    </div>
    <Spinner
      className="typeahead-spinner"
      size="16"
      type="spinner-circular"
    />
  </.sc-bwzfXH>
</div>
`;
